--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,5 +1,6 @@
-div {
+.container {
   display: flex;
+  flex-flow: column wrap;
   justify-content: center;
   align-items: center;
   height: 100vh;
